--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -5,23 +5,26 @@ description = "A modern package manager GUI for Arch Linux"
 authors = ["ArchStore Team"]
 license = "MIT"
 repository = "https://github.com/archstore/archstore"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "fs-exists", "fs-read-dir", "fs-read-file", "path-all", "protocol-asset", "dialog-all", "notification-all", "shell-execute"] }
+tauri = { version = "2", features = ["protocol-asset"] }
+tauri-plugin-shell = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-notification = "2"
+tauri-plugin-fs = "2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
-regex = "1.10"
+regex = "1.11"
 chrono = "0.4"
-once_cell = "1.19"
-reqwest = { version = "0.11", features = ["json"] }
-rayon = "1.8"
+reqwest = { version = "0.12", features = ["json"] }
+rayon = "1.10"
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem
